Ajustado codigo para java 8.